--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </div>
     
     <div class="agent-section">
-      <img src="img/AHMAD_UZAIR.jpg" alt="Agent Photo" class="agent-photo">
-      <h3 class="agent-name">AHMAD UZAIR CHAUDHRY WAHEED MUSHTAQ CHEEMA</h3>
+      <img src="img/blank.jpg" alt="Agent Photo" class="agent-photo">
+      <h3 class="agent-name">WILLIAM</h3>
       <p class="agent-role">Sales Manager</p>
       <p class="agent-registration"><span class="registration-symbol">®</span> Rise Properties RERA ORN NO. 29323</p>
     </div>
